--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.output.ansi.enable=ALWAYS
 
+######## Database config
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# conectar no mysql local no banco todosimple e criar se não existir
+spring.datasource.url=jdbc:mysql://localhost:3306/todosimple?createDatabaseIfNotExist=true
+
+# username e senha
+spring.datasource.username=root
+spring.datasource.password=02061980
+
+# Criar automaticamente tabelas relacionadas a entidades criadas ou alteradas no projeto
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar no terminal todo sql feito na aplicação
+spring.jpa.show-sql=true
